# allegro-ts-emscripten

./: .eslintignore  .eslintrc.json  .gitignore  .gitmodules  README.md  eslint.config.mjs  package.json  setup.sh  tsconfig.json
.github/workflows/: pages.yml
examples/: CMakeLists.txt  CMakePresets.json  colortest.c  exaccel.c  exbmp.c  exbounce.c  exflip.c  exmidi.c  exprimitives.c  exstress.c  musicmaker.c
examples/assets/: test.mid
src/: allegrolib.ts  allegrots.h
